# nature-of-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ch01/: CMakeLists.txt  ball-mouse-follower.cpp  ball-mover.cpp  bouncing-ball-no-vectors.cpp  bouncing-ball-vectors.cpp
ch01/ex-01-bouncing-ball-no-vectors/: CMakeLists.txt  ex-01-bouncing-ball-no-vectors.cpp
ch01/ex-02-bouncing-ball-with-vectors/: CMakeLists.txt  ex-02-bouncing-ball-with-vectors.cpp  jvector.cpp
ch01/ex-03-vector-subtraction/: CMakeLists.txt  ex-03-vector-subtraction.cpp  jvector.cpp
ch01/ex-04-multiplying-a-vector/: CMakeLists.txt  ex-04-multiplying-a-vector.cpp  jvector.cpp
ch01/ex-05-vector-magnitude/: CMakeLists.txt  ex-05-vector-magnitude.cpp  jvector.cpp
ch01/ex-06-normalizing-a-vector/: CMakeLists.txt  ex-06-normalizing-a-vector.cpp  jvector.cpp
ch01/ex-07-motion-101/: CMakeLists.txt  ex-07-motion-101.cpp  jvector.hpp  mover.hpp
ch01/ex-08-motion-101/: CMakeLists.txt  ex-08-motion-101.cpp  mover.hpp
ch01/ex-09-motion-101/: CMakeLists.txt  jvector.hpp
ch01/ex-10-accelerating-towards-mouse/: CMakeLists.txt  ex-10-accelerating-towards-mouse.cpp  jvector.hpp  mover.hpp
ch01/ex-11-array-of-movers/: CMakeLists.txt  ex-11-array-of-movers.cpp  mover.hpp
ch02/: CMakeLists.txt
ch02/ex-01-forces/: CMakeLists.txt  ex-01-forces.cpp  jvector.hpp  mover.hpp
ch02/ex-02-forces-many-objects/: CMakeLists.txt  ex-02-forces-many-objects.cpp  mover.hpp
ch02/ex-03-gravity-scaled-by-mass/: CMakeLists.txt  ex-03-gravity-scaled-by-mass.cpp  mover.hpp
ch02/ex-04-including-friction/: CMakeLists.txt  ex-04-including-friction.cpp  jvector.hpp
ch02/ex-05-fluid-resistance/: CMakeLists.txt  ex-05-fluid-resistance.cpp  liquid.hpp  mover.hpp
include/graphics/: moversfml.h
include/mover/: mover.h
include/vector/: vector.h
src/graphics/: moversfml.cpp
src/mover/: mover.cpp
src/vector/: vector.cpp
