add_subdirectory(ex-01-bouncing-ball-no-vectors)
add_subdirectory(ex-02-bouncing-ball-with-vectors)
add_subdirectory(ex-03-vector-subtraction)
add_subdirectory(ex-04-multiplying-a-vector)
add_subdirectory(ex-05-vector-magnitude)
add_subdirectory(ex-06-normalizing-a-vector)
add_subdirectory(ex-07-motion-101)
add_subdirectory(ex-08-motion-101)
